--- a/package.json
+++ b/package.json
@@ -11,22 +11,31 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
+    "@angular/cdk": "^14.2.7",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
+    "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@types/geojson": "^7946.0.14",
+    "@types/maplibre-gl": "^1.13.2",
+    "geojson": "^0.5.0",
+    "maplibre-gl": "^2.4.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.7",
-    "@angular/cli": "~14.0.7",
+    "@angular/cli": "^14.0.7",
     "@angular/compiler-cli": "^14.0.0",
+    "@mapbox/point-geometry": "^1.1.0",
     "@types/jasmine": "~4.0.0",
+    "@types/mapbox__point-geometry": "^0.1.4",
+    "@types/mapbox__vector-tile": "^1.3.4",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
